dfir_rs/tests/compile-fail/surface_demuxenum_missingtypeparam.stderr
error: `demux_enum` should have exactly 1 generic type arguments, actually has 0.
  --> tests/compile-fail/surface_demuxenum_missingtypeparam.rs:17:15
   |
17 |         ]) -> demux_enum();
   |               ^^^^^^^^^^
